# semantify3

./: .gitignore  .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml
scripts/: blackisort
search/: search_index.json
sem3/: __init__.py  extractor.py  homepage.py  lod2rdf.py  sem3_cmd.py  version.py
tests/: base_sem3test.py  test_cmd.py  test_extractor.py  test_homepage.py  test_lod2rdf.py
